--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "js-angusj-clipper": "^1.3.1",
     "lucide-react": "^0.475.0",
     "maxrects-packer": "^2.7.4",
-    "next": "15.3.3",
+    "next": "^16.0.7",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
